--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.4.3",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-kawaii": "^0.17.0",
     "autoprefixer": "10.4.14",
     "colorsea": "^1.2.1",
     "next": "13.4.12",
@@ -24,7 +25,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-kawaii": "^0.18.0",
     "react-quill": "^2.0.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
