--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coding-club-gct/theme": "^1.1.5",
+    "@coding-club-gct/theme": "latest",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@monaco-editor/react": "^4.5.1",
